--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
@@ -17,19 +18,22 @@ header {
 }
 
 header h1 {
+    font-size: 4em;
     text-align: center;
+    font-family: "Zen Dots";
 }
 
 header nav ul {
+    text-align: center;
     list-style: none;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
-
 }
 
 header nav ul li {
     display: inline;
     margin: auto;
+    padding: 10px 10%;
 }
 
 header nav ul li a {
